--- a/pages/avatar/avatar.wxml
+++ b/pages/avatar/avatar.wxml
@@ -1,41 +1,35 @@
 <!--index.wxml-->
-<view class="container">
-  <view wx:if="{{!isReady}}" class="loadpage">
-		<canvas canvas-id="loadCanvas" class="loadAnimate">
-			<image src="../../images/cup/WorldCup2018.png" mode="aspectFit" class="animateCup"></image>
-		</canvas>
-		<view class="loadText">
-			页面加载中
-			<text class='first-point'>.</text>
-			<text class='second-point'>.</text>
-			<text class='third-point'>.</text>
-			<text class='fourth-point'>.</text>
-		</view>
-	</view>
-  <block wx:else>
-		<view class="userInfo">
-			<!-- <text class="title">{{userInfo.nickName}}</text>
-			<text class="content">
-				为您的头像添加喜爱球队的logo吧！
-			</text> -->
-		</view>
-    <view class="userAvatar">
-      <view class='middle' style='background-image:url({{avatarUrl}})'>
-      <image class='selectedIcons' wx:for="{{selectedIcons}}" wx:key="selectedIcons" src='{{item.path}}' data-key='{{index}}' catchtouchmove='move' catchtouchstart='getStartPosition' catchtouchend='getEndPosition' style="left:{{item.position[0]+'px'}};top:{{item.position[1]+'px'}};width:{{item.size[0]+'px'}};height:{{item.size[1]+'px'}};transform:rotate({{item.rotate+'deg'}})"></image>
-      </view> 
-    </view>
-<view class='btns'>
-<view class='{{status}}' data-status='{{status}}' bindtap='editStatus'>编辑</view>
-<view class='{{status}}' data-bgUrl='{{userInfo.avatarUrl}}' bindtap='saveAvatar'>保存</view>
+<view wx:if="{{!hasUserInfo}}" class="loadpage">
+  <canvas canvas-id="loadCanvas" class="loadAnimate">
+    <image src="../../images/WorldCup2018.png" mode="aspectFit" class="animateCup"></image>
+  </canvas>
+  <view class="loadText">
+    页面加载中
+    <text class='first-point'>.</text>
+    <text class='second-point'>.</text>
+    <text class='third-point'>.</text>
+    <text class='fourth-point'>.</text>
+  </view>
 </view>
+<block wx:else>
+<view class="container">
+    <canvas class="hidden-canvas" canvas-id='userinfo-avatar1'></canvas>
+    <view class='middle' style='background-image:url({{avatarUrl.url}})'>
+      <image class="selectedIcons {{item.path ? '' : 'noShow'}}" wx:for="{{selectedIcons}}" wx:key="selectedIcons" src='{{item.path}}' data-key='{{index}}' catchtouchmove='move' catchtouchstart='getStartPosition' catchtouchend='getEndPosition' style="transform:translate({{item.position[0]+'px'}},{{item.position[1]+'px'}}) rotate({{item.rotate+'deg'}});width:{{item.size[0]+'px'}};height:{{item.size[1]+'px'}};"></image>
+    </view>
+    <view class='btns'>
+      <view class="{{status}} {{iconCounts > 0 ? '' : 'noHasIcon'}}" data-status='{{[status,iconCounts]}}' bindtap='editStatus'>编辑</view>
+      <view class="" bindtap='imageFromAlbum'>更换图片</view>
+      <view class='{{status}}' data-status='{{status}}' bindtap='saveAvatar'>保存</view>
+    </view>
     <view wx:if="{{status == 'select'}}" class="iconCards" bindtouchstart="touchStart" bindtouchend="touchEnd">
-       <view wx:for="{{cards}}" wx:for-item="card" class="{{card.className}}">
+       <view wx:for="{{cards}}" wx:for-item="card" class="{{card.className}}" wx:key="cards">
       <view class="card-top">
       {{card.title}}
       </view>
-      <view class="card-icons" bindtap="test" data-tagname="{{card.title}}"  bindtap='selectOrNot'>
-          <view wx:for="{{card.icons}}" wx:for-item="icon" class="card-icon">
-              <image class="icon-img" mode="widthFix" src="{{icon}}" data-path="{{icon}}"></image>
+      <view class="card-icons" data-tagname="{{card.title}}"  bindtap='selectOrNot'>
+          <view wx:for="{{card.icons}}" wx:for-item="icon" class="card-icon {{selectedIcons[icon].path ? 'iconGrey' : ''}}" wx:key="icons">
+              <image class="icon-img" mode="aspectFit" src="{{icon}}" data-path="{{icon}}" bindload='getIconSize'></image>
           </view>
       </view>
       <image class="card-bottom" src="../../images/official_bottom_on.png">
@@ -69,75 +63,5 @@
         </view>
       </view>
     </block>
-        <canvas class="hidden-canvas" canvas-id='userinfo-avatar1'></canvas>
-
-
-<!--      
-		<view class="userAvatar">
-			<view class="side">
-				<text class="content">放大</text>
-				<view class="bar"></view>
-				<text class="content">缩小</text>
-			</view>
-			<view class="middle">
-				<image class="image-avatar" src="{{avatarPath}}" mode="widthFix"></image>
-			</view>
-			<view class="side">
-				<text class="content">左旋</text>
-				<view class="bar">
-					<view class="sliding-block"></view>
-					<view class="tips"><text>{{rotateDeg}}</text></view>
-				</view>
-				<text class="content">右旋</text>
-			</view>
-		</view>  -->
-		<!-- <view class="buttonList">
-			<view class="button click">
-				<text class="countries" decode="{{true}}">国&emsp;旗</text>
-			</view>
-			<view class="button"><text class="teams" decode="{{true}}">队&emsp;旗</text></view>
-			<view class="button"><text class="others" decode="{{true}}">其&emsp;它</text></view>
-		</view> -->
-
-		<!-- <view class="logo">
-
-		</view> -->
-	</block>
-  <!-- <view class="userinfo"> -->
-    <!-- <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <view class="userinfo-avatar" style='background-image: url({{avatarUrl}})'>
-      <image class='selectedIcons' wx:for="{{selectedIcons}}" wx:key="selectedIcons" src='{{item.path}}' data-key='{{index}}' catchtouchmove='move' catchtouchstart='getStartPosition' catchtouchend='getEndPosition' style="left:{{item.position[0]+'px'}};top:{{item.position[1]+'px'}};width:{{item.size[0]+'px'}};height:{{item.size[1]+'px'}};transform:rotate({{item.rotate+'deg'}})"></image>  -->
-
-
-      <!-- animation="{{item.animationData}}"  -->
-       <!-- <image style='width:50px;height:50px;' src='../../images/cup/cup.gif' animation="{{animationData}}"></image> -->
-
-
-      <!-- </view>
-      <button bindtap='imageFromAlbum'>选择图片</button>
-      <view class='showroom'>
-        <button wx:for="{{tagList}}" wx:key="*this" data-tagname="{{item}}" bindtap='switchTag'>{{item}}</button>
-        <view wx:for="{{showIcons}}" wx:key="{{currentTag}}">
-         {{item[currentTag + 'Path']}}
-        </view>
-        <view style='border:1px solid red;width:300px;height:300px;margin:5px auto'>
-        <image wx:for="{{showIcons}}" wx:key="{{currentTag}}" src="{{item[currentTag + 'Path']}}" data-tagname="{{currentTag}}" data-id="{{item.id}}" data-path="{{item[currentTag + 'Path']}}" bindtap='selectOrNot' style='width:80px;height:80px'>
-        </image>
-      </view>
-      </view>
-      <view style='margin-top:300px;'>
-      <view style='display:flex'>缩放<button data-direction='-' bindtap='changeSize'>-</button><button data-direction='+' bindtap='changeSize'>+</button></view>
-      <view style='display:flex'>旋转<button data-direction='-' bindtap='iRotate'>-</button><button data-direction='+' bindtap='iRotate'>+</button></view>
-      </view>
-      <view id="draw" bindtap="drawCanvas" data-bgUrl='{{userInfo.avatarUrl}}'> 保存图片 </view>
-      <canvas style="width: 500rpx; height: 500rpx; border: 1rpx solid #0f0" canvas-id='userinfo-avatar1'></canvas>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block> -->
-  <!-- </view> -->
-  <!-- <view id="save" bindtap="saveCanvas"> 导出图片 </view> -->
-  <!-- <image id="afterImage" src='{{saveImage}}'></image> -->
-  <!-- <view class="usermotto">
-    <text class="user-motto">{{motto}}{{getRequest}}</text>
-  </view> -->
 </view>
+</block>
