--- a/pages/prediction/prediction.wxml
+++ b/pages/prediction/prediction.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
- <view class="banner">
+ <!-- <view class="banner">
   <view class="content">
     {{userName}},您预测了{{predictionCounts}}场比赛，猜对胜负{{correctVictoryCounts}}场，击败了{{beatUsers}}的用户
   </view>
@@ -31,5 +31,5 @@
       <view class="hour">{{match['time']['hour']}}</view>
     </view>
   </view>
-</view> 
+</view>  -->
 <view style='margin:0 auto;color:white;text-align:center;padding:50rpx;height:100%;background: url(https://sklang.cloudms.cn/img/darkbluebg.png)'>你的队伍尚未出征...</view>
